# Auralynq

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DECISIONS.md  LICENSE  Makefile  README.md  RUNNING.md  THIRD_PARTY.md  compose.yml  prompt.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
auralynq/: __init__.py  cli.py  pipeline.py  providers.py  utils.py
auralynq/agent/: __init__.py  cache.py  graph.py  nodes.py  runner.py  state.py
auralynq/config/: __init__.py  settings.py
auralynq/embeddings/: __init__.py  base.py  bge.py  factory.py  hashing.py  openai_embed.py  resilient.py
auralynq/eval/: __init__.py  asr_eval.py  bench.py  datasets.py  ragas_eval.py  report.py  retrieval_metrics.py
auralynq/grounding/: __init__.py  resolver.py
auralynq/ingest/: __init__.py  audio.py  chunking.py  models.py  parsers.py  pipeline.py
auralynq/llm/: __init__.py  base.py  factory.py  fallback.py  providers.py  resilient.py
auralynq/mcp_server/: __init__.py  auth.py  server.py  tools.py
auralynq/rag/: __init__.py  strategy_registry.py
auralynq/rag/strategies/: __init__.py  auralynq_rag.py  base.py  graph.py  hybrid.py  naive_vector.py  (+1 more)
auralynq/research/: __init__.py  calibrate.py  calibration.py  cli.py  config.py  evidence_sufficiency.py  metrics.py  provenance.py  reporting.py  runner.py  trace.py
auralynq/retrieval/: __init__.py  base.py  models.py  naive.py  router.py
auralynq/serving/: __init__.py  app.py  auth.py  corpus.py  corpus_manager.py  errors.py  observability.py  ratelimit.py  schemas.py  worker.py
auralynq/telemetry/: __init__.py  langfuse_export.py  logging.py  tracing.py
auralynq/vectorstore/: __init__.py  base.py  factory.py  memory_store.py  qdrant_store.py
auralynq/voice/: __init__.py  asr.py  diarize.py  factory.py  loop.py  tts.py  vad.py
configs/research/: abstention_calibrated.yaml  baseline_vector.yaml  full_agentic.yaml  graph_rag.yaml  hybrid_retrieval.yaml  ollama_balanced.yaml  ollama_server.yaml  ollama_small.yaml  rerank_only.yaml
containers/: Caddyfile  api.Dockerfile  caddy.Dockerfile  web.Dockerfile
data/: README.md
deploy/k8s/: api.yaml  config.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  mcp.yaml  namespace.yaml  phoenix.yaml  qdrant.yaml  web.yaml  worker.yaml
docs/: DEMO.md  SERVICES.md  frontend-premium-redesign-audit.md  product-ux-competitor-audit.md  sparknet-design-port.md
docs/audits/: corpus-delete-and-layout-root-cause.md
docs/research/: artifact-checklist.md  benchmark-datasets.md  dataset-setup.md  evaluation-metrics.md  experimental-protocol.md  literature-gap-analysis.md  literature_matrix.csv  model-ablation-plan.md  ollama-model-recommendations.md  paper_contribution_strategy.md  phase2-research-plan.md  reproducibility.md  research-questions.md
reports/: README.md  bench_report.json  eval_report.json  golden_baseline.json
scripts/: __init__.py  build_images.sh  check_container_runtime.sh  demo.py  download_data.py  image_env.sh  name_audit.py  push_images.sh  run_local.sh  stack_up.sh
scripts/research/: analyze_traces.py  smoke_experiment.py
tests/: conftest.py  test_agent.py  test_auth.py  test_cli_and_misc.py  test_corpus_management.py  test_embeddings.py  test_eval.py  test_graph_and_index.py  test_ingest.py  test_langfuse.py  test_mcp.py  test_mcp_auth.py  test_mcp_protocol.py  test_pathrag.py  test_product_ux.py  test_rag_strategies.py  test_research.py  test_retrieval.py  test_serving.py  test_source_workspace.py  test_vectorstore.py  test_visual_grounding.py  test_voice.py
web/: .dockerignore  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Citations.tsx  ConfidenceBar.tsx  CopyButton.tsx  CorpusInventory.tsx  CorpusManageModal.tsx  EvalPanel.tsx  EvidencePaths.tsx  IngestPanel.tsx  InsufficientEvidence.tsx  Markdown.tsx  Message.tsx  SourceViewPanel.tsx  SourceWorkspaceModal.tsx  ThemeToggle.tsx  TracePanel.tsx  VoiceRecorder.tsx
web/lib/: api.ts  failover.test.mjs  failover.ts  format.test.mjs  format.ts  sse.test.mjs  sse.ts  theme.test.mjs  theme.ts  ui.test.mjs
(+47 files in other folders)
